# Thermostat

./: .gitignore  CMakeLists.txt  README.md
ProjectFiles/: CMakeLists.txt  aht20.c  aht20.h  circular_buffer.c  circular_buffer.h  i2c_module.c  i2c_module.h  main.c  seven_seg.c  seven_seg.h
